# crypto-warren

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  backtest.py  check_balance.py  crypto-warren.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: aws-ecr.yml
bots/: Trade.py  TradingBot.py  VolatilityTrader.py
database/: CreateTradesTable.sql  DatabaseConnector.py  DatabaseConnectors.py  DatabaseContextManagers.py  database_connection.py  model.py
examples/: compare_strategies.py  parameter_optimization.py
exchanges/: Bitstamp.py  Exchange.py  Kraken.py
src/backtesting/: backtest_runner.py  data_fetcher.py  strategies.py  visualizer.py
src/bots/: VolatilityTrader.py  bot.py  trading_bot.py
src/configs/: bot_config.yaml  strategy_config.yaml
src/database/: DatabaseConnector.py  DatabaseConnectors.py  database_connection.py
src/db/: database.py
src/exchanges/: Exchange.py
src/executions/: execution.py  schedule.py
src/models/: config.py  exchange.py  trade.py  trading.py
src/strategies/: momentum_strategies.py  strategy.py  trading_strategies.py  trading_strategies_old.py
strategies/: TradingStrategy.py  VolatiltyTradingStrategy.py
tests/: TestExchange.py  TestTraderBot.py  TestTradingStrategy.py  mock_exchange.py  test_executor.py
tests/data/: ohlcv-1h-sol-usdc-usdc.csv
tests/strategies/: test_momentum_strategies.py
