[project]
name = "crypto-warren"
version = "0.1.0"
description = "This is a crypto trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "ccxt>=4.5.2",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "ta>=0.11.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[mypy]
ignore_missing_imports = true
